Win32: Statically link against libgcc
Signed-off-by: Thorsten Maerz <info@netztorte.de>

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -254,6 +254,9 @@ endif
 LDFLAGS +=	-Wl,-rpath,$(LIBDIR)
 endif
 # LDFLAGS for all 
+ifeq ($(OS),win32)
+  LDFLAGS +=	-static-libgcc -static-libstdc++
+endif
 LDFLAGS +=	-Wl,--warn-common
 # See above at "-ffunction-sections" for an explanation (and why it is disabled).
 #LDOPTS +=	-Wl,--gc-sections
